[package]
name = "rust-axum-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

# Web
axum = "0.7.5"

tower-http = { version = "0.5", features = ["fs"] }

[dev-dependencies]
anyhow = "1"
